new section added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
                 </section>
             </nav>
         </header>
+        <!-- banner section  -->
+        <main>
+            <section class="container">
+                <div class="top-banner">
+                    <div class="banners">
+                        <div class="banner">
+                            <h2 class="banner-name">Start your Journey as <br>
+                                Influencer</h2>
+                            <p class="banner-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+                                vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                            <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                        <div class="banner-img">
+                            <img src="images/main-camera.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 
 </html>
