blog section added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,183 @@
                     </div>
                 </div>
             </section>
+            <!-- company logo start  -->
+            <section class="logo-container">
+                <div class="company-logo">
+                    <div class="logos">
+                        <div class="logo">
+                            <img src="./logos/Alibaba.svg" alt="">
+                            <img src="./logos/Amazon.svg" alt="">
+                            <img src="./logos/Daraz.pk Logo.svg" alt="">
+                            <img src="./logos/Ebay.svg" alt="">
+                            <img src="./logos/Rakuten.svg" alt="">
+                            <img src="./logos/Target.svg" alt="">
+                            <img src="./logos/Walmart.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- blog section start -->
+            <section class="blog-container">
+                <div class="top-blog">
+                    <h3 class="blog-title">Popular Collection</h3>
+                    <div class="blogs">
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/tripod.png" alt="">
+                                <h2 class="blog-name">Flex Tripod</h2>
+                                <h2 class="blog-price">$50.48</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/mic.png" alt="">
+                                <h2 class="blog-name">microphone</h2>
+                                <h2 class="blog-price">$120.25</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/airpod.png" alt="">
+                                <h2 class="blog-name">Airbuds</h2>
+                                <h2 class="blog-price">$100.00</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/drone.png" alt="">
+                                <h2 class="blog-name">Drone</h2>
+                                <h2 class="blog-price">$980.25</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/lights.png" alt="">
+                                <h2 class="blog-name">Light Setup</h2>
+                                <h2 class="blog-price">$1200.00</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/setup.png" alt="">
+                                <h2 class="blog-name">Photoshoot set</h2>
+                                <h2 class="blog-price">$820.40</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/camera.png" alt="">
+                                <h2 class="blog-name">Vlogging Camera</h2>
+                                <h2 class="blog-price">$1800.80</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/single-light.png" alt="">
+                                <h2 class="blog-name">Green Screen</h2>
+                                <h2 class="blog-price">$25.48</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            <div class="blog-thumbnail">
+                                <img src="images/action.png" alt="">
+                                <h2 class="blog-name">Action Camera</h2>
+                                <h2 class="blog-price">$380.00</h2>
+                                <div class="blog-ratings">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span class="rating">4.99</span>
+                                    <p class="ratings-details">Wordwide shifting <br> available <br>
+                                        Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 
