--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="arrow-section">
+                    <p class="arrow">See More <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
             </section>
         </main>
     </body>
