new section added

--- a/index.html
+++ b/index.html
@@ -233,6 +233,23 @@
                     <p class="arrow">See More <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
             </section>
+            <!-- feature secton start  -->
+            <article class="feature-container">
+                <div class="features-bottom">
+                    <div class="features">
+                        <div class="feature">
+                            <img src="images/gear.png" alt="">
+                        </div>
+                        <div class="feature-desk">
+                            <h2 class="feature-name">Featured products at one place</h2>
+                            <p class="feature-blog">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                                nostrud amet.</p>
+                            <button class="btn2">Join now <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </article>
         </main>
     </body>
 
