new section added

--- a/index.html
+++ b/index.html
@@ -251,6 +251,21 @@
                 </div>
             </article>
         </main>
+        <!-- foooter start  -->
+        <footer>
+            <div class="footer-tab">
+                <div class="footer-bottom">
+                    <h2 class="footer-name">Influencer products</h2>
+                    <p class="footer-desk">Copyright © 2020 influencer products <br>All rights reserved</p>
+                    <div class="footer-media">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-solid fa-basketball"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 
 </html>
