media querry added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <a href="">Sign up</a>
                                 <a href="">Log In</a>
                                 <i class="fa-solid fa-magnifying-glass"></i>
-                                <i class="fa-solid fa-cart-shopping"></i>
+                                <i class="fa-solid fa-cart-shopping extra-shopping-cart"></i>
                             </div>
                         </div>
                     </div>
